Registration functionality created. The user must enter username, email and password for registering

--- a/client/html/signup.html
+++ b/client/html/signup.html
@@ -28,7 +28,7 @@
             <button type="submit" id="login-btn"
                 class="btn btn-lg btn-primary btn-block"
             >
-                Log In
+                Register
             </button>
             <p>Already have an Account? <a href="/login">Log in</a></p>
         </form>
