Tracker added to login page to redirect if user is logged in. Templates for profile, search and rankings created.

--- a/client/html/sidebar.html
+++ b/client/html/sidebar.html
@@ -11,15 +11,15 @@
             {{else}}
             {{/if}}
             
-            <a href="#" class="link-blue" id="jokes-link">
+            <a href="/jokes" class="link-blue" id="jokes-link">
                 <i class="fa fa-comments-o"></i>
-                Comments
+                Jokes
             </a>
-            <a href="#" class="link-yellow" id="rankings-link">
+            <a href="/rankings" class="link-yellow" id="rankings-link">
                 <i class="fa fa-trophy"></i>
                 Rankings
             </a>
-            <a href="#" class="link-green" id="search-link">
+            <a href="/search" class="link-green" id="search-link">
                 <i class="fa fa-search"></i>
                 Search
             </a>
