Changes implemented to use pub/sub pattern.

--- a/client/html/jokeForm.html
+++ b/client/html/jokeForm.html
@@ -17,8 +17,8 @@
                         Joke Post
                     </label>
                     <textarea name="jokePost" id="jokePost"
-                        class="form-control" placeholder="Joke post"
-                        cols="40" rows="4"></textarea>
+                        class="form-control" placeholder="Break a leg!"
+                        cols="40" rows="4" maxlength="140"></textarea>
 
                     <button type="submit"
                         class="btn btn-lg btn-success btn-block"
