--- a/client/html/profile.html
+++ b/client/html/profile.html
@@ -19,15 +19,17 @@
         </div>
     </div>
     <!-- /Profile -->
+
+    {{#each userJokes}}
     <!-- Joke -->
     <div class="joke">
         <div class="row">
             <div id="info"
                 class="col-sm-6 col-md-5 col-lg-6"
             >
-                <h1 class="joke-title">Joke 1</h1>
-                <p class="meta">Author: User 1</p>
-                <p class="meta">Posted on: 10/10/2016</p>
+                <h1 class="joke-title">{{jokeName}}</h1>
+                <p class="meta">Author: {{author}}</p>
+                <p class="meta">Posted on: {{date}}</p>
             </div>
             <div id="votes"
                 class="col-sm-6 col-md-5 col-md-offset-2 col-lg-6 col-lg-offset-0"
@@ -37,18 +39,24 @@
                 <img src="puke.png" alt="" class="smiley" id="puke">
                 
                 <div class="row" id="score">
-                    <h3 class="count red block">12</h3>
-                    <h3 class="count yellow block">8</h3>
-                    <h3 class="count green block">3</h3>
+                    <h3 class="count red block">{{laughScore}}</h3>
+                    <h3 class="count yellow block">{{frownScore}}</h3>
+                    <h3 class="count green block">{{pukeScore}}</h3>
                 </div>
             </div>
         </div>
 
         <p class="regular joke-desc">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero aspernatur dolor ducimus eum possimus sed ipsam, quaerat nesciunt placeat sunt, officiis vitae corporis eveniet expedita? Temporibus earum maxime illum tempore?
+            {{jokePost}}
         </p>
+        <button class="btn btn-sml btn-danger" id="delete-joke">
+            Delete Joke
+        </button>
     </div>
     <!-- /Joke -->
+    {{else}}
+    <h1>No jokes to display.</h1>
+    {{/each}}
 
     {{/if}}
 </template>
